--- a/projetofinal/src/main/resources/templates/home.html
+++ b/projetofinal/src/main/resources/templates/home.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
-<html layout:decorate="~{Layout}">
-<head>
-	<meta charset="UTF-8"/>
-	<script type="text/javascript"></script>
-</head>
+<html layout:decorate="~{layout}">
+<head><meta charset="UTF-8" /></head>
 <body>
-	<section class="layout-content" layout:fragment="corpo">
+		
+	<section class="layout-content" layout:fragment="corpo">	
 		<nav class="navbar navbar-expand-md bg-light">
 			<div class="collapse navbar-collapse" id="navbarsExampleDefault">
 				<ul class="navbar-nav mr-auto">
@@ -101,8 +99,7 @@
 				</div>
 			</div>
 		</div>
-
-	</section>
-</body>
+		
+	</section>		
 </body>
 </html>
