--- a/projetofinal/src/main/resources/templates/fragments/footer.html
+++ b/projetofinal/src/main/resources/templates/fragments/footer.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="UTF-8">
-<script type="text/javascript"></script>
-</head>
+<head><meta charset="UTF-8"></head>
 <body>
-    <footer class="layout-footer" th:fragment="rodape">
+	<footer class="layout-footer" th:fragment="rodape">
 		<div class="container">
-			<span class="footer-copy"></span>
+			<span class="footer-copy">&copy; 2018 MBallem. Todos os direitos reservados.</span>
 		</div>
 	</footer> 
 </body>
